fix: animation section mobile ivew

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -81,7 +81,7 @@ nav ul li a {
 }
 
 .animation-section h1 {
-  font-size: 40px;
+  font-size: 24px;
 }
 
 .animation-section a {
@@ -89,7 +89,7 @@ nav ul li a {
 }
 
 .animation-section a span {
-  line-height: 56px;
+  line-height: 44px;
   color: var(--purpley-pink);
 }
 
