--- a/src/styles/styleOver1280.css
+++ b/src/styles/styleOver1280.css
@@ -15,6 +15,15 @@
     font-size: 16px;
   }
 
+  .animation-section h1 {
+    font-size: 40px;
+  }
+
+  .animation-section a span {
+    line-height: 56px;
+    color: var(--purpley-pink);
+  }
+
   .what-can-you-do-article-text {
     width: 640px;
   }
